# fra502

./: package.xml  setup.cfg  setup.py
launch/: gazebo.launch.py  main.launch.py  rviz.launch.py  spawn_robot.launch.py
phobos/: omni_tratsah.blend  omni_tratsah.blend1  untitled.blend  untitled.blend1
urdf/: mooncake.urdf  omni_tratsah.urdf  rover.urdf  tratsah.rviz  tratsah.urdf  unnamed.urdf
