<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fra502</name>
  <version>0.0.0</version>
  <description>FRA502 - Service Robot Class Project</description>
  <maintainer email="teerameth.sk@gmail.com">teera</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>gazebo_ros_pkgs</depend> -->
  <depend>moveit</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <!-- <depend>camera_controller</depend> -->
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>image_view</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
